--- a/mygame/www/index.html
+++ b/mygame/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>mygame</title>
+	<title>Slime Quest</title>
 </head>
 <body>
 	<script src="main.js"></script>
